--- a/index.html
+++ b/index.html
@@ -5,13 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Spotify Clone</title>
     <!-- * Css Link -->
-    <link rel="stylesheet" href="./style/style.css">
+    <link rel="stylesheet" href="./style/style.css" />
     <!-- * Bs Icon -->
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
     />
-
   </head>
   <body>
     <div class="layout">
@@ -65,17 +64,19 @@
             <span>Explore Premium</span>
             <span>Support</span>
             <span>Login</span>
+            <i class="bi bi-arrow-down-circle"></i>
+            <span>Install App</span>
             <i class="bi bi-bell"></i>
           </nav>
         </header>
         <!-- Music -->
-         <section>
-            <!-- Title -->
-            <h2 id="title">Populer Musics</h2>
-            <!-- Lists -->
-             <div class="list">
-             <!-- Card -->
-                <!-- <div class="card">
+        <section>
+          <!-- Title -->
+          <h2 id="title">Populer Musics</h2>
+          <!-- Lists -->
+          <div class="list">
+            <!-- Card -->
+            <!-- <div class="card">
                     <figure>
                       
                         <img src="./images/imany1.jpg" alt="">
@@ -217,10 +218,110 @@
                   <h4>Imany</h4>
               </div>
           </div> -->
-             </div>
-         </section>
+          </div>
+        </section>
       </main>
     </div>
+
+    <div class="player">
+      <!-- Info -->
+      <div class="info">
+        <img
+          src="https://is1-ssl.mzstatic.com/image/thumb/Music125/v4/e5/4a/26/e54a26c4-fcce-b763-bea5-901a821ddb49/859720717961_cover.jpg/400x400cc.jpg"
+          alt=""
+        />
+        <div>
+          <h5>Take Care</h5>
+          <p>Imany</p>
+        </div>
+      </div>
+
+      <!-- Audio -->
+      <audio
+        src="https://audio-ssl.itunes.apple.com/itunes-assets/AudioPreview115/v4/b9/f2/c7/b9f2c7fb-854a-1f7a-b994-764d6d78f1e5/mzaf_11066314483681198504.plus.aac.ep.m4a"
+        controls
+      ></audio>
+
+      <!-- Right -->
+      <div class="icons">
+        <i class="bi bi-repeat"></i>
+        <i class="bi bi-mic"></i>
+        <i class="bi bi-music-note-list"></i>
+        <i class="bi bi-boombox"></i>
+        <i class="bi bi-pc-display"></i>
+      </div>
+    </div>
+
+    <!-- * Footer Area -->
+
+<footer>
+  <div class="footer-c container">
+    <!-- First Part -->
+    <div class="footer-box">
+      <div class="social">
+        <a href="#"><i class="bi bi-pinterest"></i></a>
+        <a href="#"><i class="bi bi-instagram"></i></a>
+        <a href="#"><i class="bi bi-facebook"></i></a>
+      </div>
+    </div>
+    <!-- Second Part-->
+    <div class="footer-box">
+      <h3>Communities</h3>
+      <a href="#">For Artists</a>
+      <a href="#">Developers</a>
+      <a href="#">Advertising</a>
+      <a href="#">Investors</a>
+      <a href="#">Vendors</a>
+    </div>
+
+    <!-- Third Part-->
+  <div class="footer-box">
+    <h3>Company</h3>
+    <a href="#">About</a>
+    <a href="#">Jobs</a>
+    <a href="#">For the Record</a>
+  </div>
+
+    <!-- Third Part-->
+    <div class="footer-box">
+    <h3>Useful links</h3>
+    <a href="#">Support</a>
+    <a href="#">Free Mobile App</a>
+    <a href="#">COSTY ACADEMY</a>
+  </div>
+
+  <!-- Third Part-->
+  <div class="footer-box">
+    <h3>Spotify Plans</h3>
+    <a href="#">Premium Plans</a>
+    <a href="#">Premium Individual</a>
+    <a href="#">Premium Duo</a>
+    <a href="#">Premium Family</a>
+    <a href="#">Premium Student</a>
+    <a href="#">Spotify Free</a>
+  </div>
+
+  
+    </div>
+  </div>
+<!-- downpart -->
+ <div>
+  <div class="copyright container">
+    <a href="#">Legal</a>
+    <a href="#">Safety & Privacy Center</a>
+    <a href="#">Privacy Policy </a>
+    <a href="#">Cookie Settings </a>
+    <a href="#">About Ads </a>
+    <a href="#"> Accessibility</a>
+  </div>
+  <!-- Copyright -->
+   <div class="copyright container">
+    &copy; 2025 Spotify AB 
+  </div>
+  </div>
+</footer>
+
+
 
     <!-- * Js Baglanti -->
     <script src="./js/main.js" type="module"></script>
